# vllm

./: CMakeLists.txt  bench_params.json  serve_params.json
experimental/qknorm_kernel_lab/: CMakeLists.txt  README.md
experimental/qknorm_kernel_lab/profiles/: round1_compare_prod.json  round1_summary.json  round1_timing.json
experimental/qknorm_kernel_lab/profiles/rounds/instruction_density/: ncu_results.txt  timing.json
experimental/qknorm_kernel_lab/profiles/rounds/r001/: compare_prod.json  timing.json
experimental/qknorm_kernel_lab/profiles/rounds/r001_v2/: compare_prod.json  timing.json
experimental/qknorm_kernel_lab/profiles/rounds/r002/: compare_prod.json  timing.json
experimental/qknorm_kernel_lab/profiles/rounds/r002_v2/: compare_prod.json  timing.json
experimental/qknorm_kernel_lab/profiles/rounds/r003/: compare_prod.json  (+1 more)
experimental/qknorm_kernel_lab/python/: analyze_round.py  bench_block_sweep.py  bench_compare_prod.py  bench_cossin_async_ablation.py  bench_hpw_sweep.py  bench_instruction_density.py  bench_multi_tokens.py  bench_once.py  compare_rounds.py  qknorm_lab_utils.py
experimental/qknorm_kernel_lab/reports/: PROGRESS_SUMMARY.md  instruction_density_experiment.md  r002_vec_weight_load.md  r003_eliminate_elements2.md  r005_cossin_register_only.md  r008_launch_bounds.md  r012_block_size_sweep.md  r013_hpw_sweep.md
experimental/qknorm_kernel_lab/scripts/: build_lab.sh  build_round.sh  ncu_density_quick.sh  run_instruction_density.sh  run_round.sh  run_round1.sh
experimental/qknorm_kernel_lab/src/: fused_qknorm_rope_improve_kernel.cu  qknorm_rope_lab_binding.cpp
experimental/qknorm_kernel_lab/src/rounds/: r002_vec_weight_load.cu  r003_eliminate_elements2.cu  r005_cossin_register_only.cu  r008_launch_bounds.cu
experimental/qknorm_kernel_lab/tests/: test_smoke.py
(+50 files in other folders)
